# bioinformatics

./: CODE_OF_CONDUCT.md  README.md  pgip.db
app/: __init__.py
backend/: README.md  alembic.ini  pgip.db  requirements-dev.txt  requirements.txt
backend/alembic/: README.md  env.py  script.py.mako
backend/app/: main.py
backend/app/api/routes/: plugins.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/models/: plugin.py
backend/app/repositories/: plugins.py
backend/tests/: conftest.py  test_health.py
cli/: README.md  pyproject.toml
cli/pgip_cli/: __init__.py  app.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/pages/: DashboardPage.tsx  PluginDetailPage.tsx  PluginsPage.tsx
workflows/nextflow/: README.md  ingest_pangenome.nf
