[project]
name = "pgip-cli"
version = "0.1.0"
description = "Command-line interface for the PanGenome Insight Platform"
readme = "README.md"
authors = [{ name = "PGIP Team" }]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.4",
    "httpx>=0.27.2",
    "rich>=13.7.1",
    "pydantic>=2.9.2"
]

[project.scripts]
pgip = "pgip_cli.app:app"

[tool.typer]
color = true
